--- a/src/userInterface/formRequisicao.form
+++ b/src/userInterface/formRequisicao.form
@@ -179,6 +179,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="textProduto">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="kkk"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textProdutoActionPerformed"/>
       </Events>
