--- a/src/userInterface/mainMenu.form
+++ b/src/userInterface/mainMenu.form
@@ -5,7 +5,7 @@
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Controle de Estoque - Supermercados do Ti&#xe3;o"/>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-      <Color id="Default Cursor"/>
+      <Color id="Cursor Padr&#xe3;o"/>
     </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[500, 200]"/>
@@ -35,13 +35,11 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="botSimulaVendas" alignment="0" min="-2" pref="428" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="titulo" max="32767" attributes="0"/>
-                              <Component id="botPesquisaProduto" max="32767" attributes="0"/>
-                              <Component id="botVerificaEstoque" max="32767" attributes="0"/>
-                          </Group>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="titulo" max="32767" attributes="0"/>
+                          <Component id="botPesquisaProduto" max="32767" attributes="0"/>
+                          <Component id="botVerificaEstoque" max="32767" attributes="0"/>
+                          <Component id="botSimulaVendas" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
