--- a/bin/userInterface/formRequisicao.form
+++ b/bin/userInterface/formRequisicao.form
@@ -10,6 +10,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Controle de Estoque - Supermercados do Ti&#xe3;o"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -80,7 +81,7 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="labelCodigo" pref="24" max="32767" attributes="0"/>
+                  <Component id="labelCodigo" max="32767" attributes="0"/>
                   <Component id="textCodigo" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -179,21 +180,45 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="textProduto">
+      <Properties>
+        <Property name="autoscrolls" type="boolean" value="false"/>
+        <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textProdutoActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="textQuantidade">
+      <Properties>
+        <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textQuantidadeActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="textFabricante">
+      <Properties>
+        <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textFabricanteActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="textCodigo">
+      <Properties>
+        <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textCodigoActionPerformed"/>
       </Events>
@@ -212,6 +237,12 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="textModelo">
+      <Properties>
+        <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textModeloActionPerformed"/>
       </Events>
@@ -220,6 +251,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Enviar Requisi&#xe7;&#xe3;o &#xe0; demais Unidades"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botEnviaRequisActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="botVoltar">
       <Properties>
